extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/parser/enumerr1a.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/parser/enumerr1a.obr:6:11:error: string matching regex '[a-zA-Z][a-zA-Z0-9]*' expected but ')' found
    x : ( );
          ^
